--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,26 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.search-scroll::-webkit-scrollbar {
+  width: 6px;
+}
+
+.search-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.search-scroll::-webkit-scrollbar-thumb {
+  background-color: #555;
+  border-radius: 8px;
+  border: 1px solid transparent;
+}
+
+.search-scroll::-webkit-scrollbar-thumb:hover {
+  background-color: #777;
+}
+
+.search-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: #555 transparent;
+}
